Se crearon las luces y se agregaron dos modelos

--- a/ProjectCGelHC/ProjectCGelHC/ProjectCGelHC.vcxproj
+++ b/ProjectCGelHC/ProjectCGelHC/ProjectCGelHC.vcxproj
@@ -50,6 +50,12 @@
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\shader_light.frag" />
+    <None Include="shaders\shader_light.vert" />
+    <None Include="shaders\skybox.frag" />
+    <None Include="shaders\skybox.vert" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{692B89E0-D396-450E-89AF-4EBE271BCFC4}</ProjectGuid>
