--- a/ProjectCGelHC/ProjectCGelHC/ProjectCGelHC.vcxproj.filters
+++ b/ProjectCGelHC/ProjectCGelHC/ProjectCGelHC.vcxproj.filters
@@ -102,4 +102,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\shader_light.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="shaders\shader_light.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="shaders\skybox.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="shaders\skybox.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
