--- a/ProjectCGelHC/ProjectCGelHC/ProjectCGelHC.vcxproj.filters
+++ b/ProjectCGelHC/ProjectCGelHC/ProjectCGelHC.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClInclude Include="Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Windows.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\shader_light.frag">
